--- a/style.css
+++ b/style.css
@@ -1,3 +1,73 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
+
+#first{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background: url("assets/Netflix\ Background.jpg") no-repeat center center/cover;
+}
+
+#first::after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgb(0, 0, 0, 0.4);
+    box-shadow: 300px 50px 300px #000, inset -120px -100px 250px #000;
+}
+
+#header{
+    position: relative;
+    z-index: 2;
+    height: 500px;
+}
+
+#header img{
+    width: 140px;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    transform: translate(40% , -50%);
+}
+
+#header a{
+    position: absolute;
+    top: 10%;
+    right: 0;
+    transform: translate(-60% , -50%);
+}
+
+#about {
+position: relative;
+margin: 0 26%;
+z-index: 2;
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+align-items: center;
+margin-top: 9rem;
+}
+
+#about h1{
+    font-weight: 700;
+    font-size: 50px;
+    margin: 0 30px;
+    max-width: 200px;
+    line-height: 74.5px;
+}
+
 #footer{
 background-color: black;
 }
